WIP FEATURE: Add Kids Page

--- a/pages/children.mdx
+++ b/pages/children.mdx
@@ -1,10 +1,15 @@
 import LayoutDefault from '../components/LayoutDefault'
 
-export const meta = {
-	title: 'Children',
-}
+export default ({ children }) => <LayoutDefault>{children}</LayoutDefault>
 
 # Children
 
+Child of Mercy Orphanage Centre is home to 23 children both boys and girls aged between 5 to 15 years. We try to offer a better life to orphans as well as neglected and abandoned children from poverty stricken families.
 
-export default ({ children }) => <LayoutDefault meta={meta}>{children}</LayoutDefault>
+Aside from taking care of the children and providing them basic needs it is our greatest concern that they can go to school to become well educated.
+
+Right now (2013) four of the children attend Nursery School, 17 Primary School and one girl the Secondary School. Furthermore there is one girl who goes to a Boarding School.
+
+Kenya provides no school fees free of charge, so every child has to be sponsored by well-wishing people.
+
+If you are interested to get detailed information about the children, please have a look below.
