WIP FEATURE: Add Kids Gallery

--- a/pages/children.mdx
+++ b/pages/children.mdx
@@ -1,4 +1,5 @@
 import LayoutDefault from '../components/LayoutDefault'
+import KidsGallery from '../components/KidsGallery'
 
 export default ({ children }) => <LayoutDefault>{children}</LayoutDefault>
 
@@ -13,3 +14,6 @@ Right now (2013) four of the children attend Nursery School, 17 Primary School a
 Kenya provides no school fees free of charge, so every child has to be sponsored by well-wishing people.
 
 If you are interested to get detailed information about the children, please have a look below.
+
+
+<KidsGallery />
