UPDATE: Polaroid Component

--- a/pages/mission.mdx
+++ b/pages/mission.mdx
@@ -23,7 +23,7 @@ Child of Mercy Orphanage Centre is a nonprofit making religious institution with
 	alt="Jessy, Director of COMOC"
 	w={401}
 	h={535}
-	rotationRight
+	rotation="right"
 	className="w-1/3"
 />
 </div>
