--- a/pages/volunteers.mdx
+++ b/pages/volunteers.mdx
@@ -20,6 +20,7 @@ Home
 	alt="Home"
 	w={840}
 	h={680}
+	rotation="left"
 />
 
 
@@ -51,7 +52,7 @@ During your free time you also have the opportunity to go on safari for one to t
 	alt="Volunteers"
 	w={840}
 	h={680}
-	rotationRight
+	rotation="right"
 />
 
 
@@ -68,6 +69,7 @@ Hundred percent of charges made from you go towards the running costs of the orp
 	alt="Volunteers Area"
 	w={840}
 	h={680}
+	rotation="left"
 />
 
 
@@ -102,7 +104,7 @@ If this interests you, you can also read the comments of former volunteers who d
 	alt="Volunteers Lena and Ines"
 	w={840}
 	h={680}
-	rotationRight
+	rotation="right"
 />
 </div>
 
@@ -114,6 +116,7 @@ If this interests you, you can also read the comments of former volunteers who d
 	alt="Volunteers Johanna and Yasemin"
 	w={840}
 	h={680}
+	rotation="left"
 />
 <div className="w-2/3 pl-24 text-base">
 
@@ -148,7 +151,7 @@ If this interests you, you can also read the comments of former volunteers who d
 	alt="Volunteer Mara"
 	w={840}
 	h={680}
-	rotationRight
+	rotation="right"
 />
 </div>
 
@@ -160,6 +163,7 @@ If this interests you, you can also read the comments of former volunteers who d
 	alt="Volunteers Emmie and Emma"
 	w={840}
 	h={680}
+	rotation="left"
 />
 <div className="w-2/3 pl-24 text-base">
 
