UPDATE: Kids Gallery

--- a/pages/children.mdx
+++ b/pages/children.mdx
@@ -16,4 +16,6 @@ Kenya provides no school fees free of charge, so every child has to be sponsored
 If you are interested to get detailed information about the children, please have a look below.
 
 
-<KidsGallery />
+<div className="md:flex items-center xl:-mx-48 mb-20">
+	<KidsGallery />
+</div>
