--- a/pages/volunteers.mdx
+++ b/pages/volunteers.mdx
@@ -157,7 +157,7 @@ If this interests you, you can also read the comments of former volunteers who d
 
 
 
-<div className="md:flex items-center -mx-48 mb-20">
+<div className="md:flex items-center xl:-mx-48 mb-20">
 <Polaroid
 	filename="volunteers-emmie-and-emma.jpg"
 	alt="Volunteers Emmie and Emma"
