FEATURE: Add Homepage Teaser

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,8 +1,6 @@
 import LayoutDefault from '../components/LayoutDefault'
 
-export default ({ children }) => <LayoutDefault>{children}</LayoutDefault>
-
-# Home
+export default ({ children }) => <LayoutDefault withTeaser>{children}</LayoutDefault>
 
 Child of Mercy Orphanage Centre (COMOC) was formed in 2010 and is situated within a half-acre walled plot close to Shelly Beach, and a five minute walk from the Likoni slum area south of Mombasa. It is home to 23 children – both boys and girls from ages 5-15 years. Before getting here the children had lives without any prospects: They are orphans without a family, neglected and abandoned children who lived on the street or from poor families who could not afford to take care of the children.
 
