--- a/pages/mission.mdx
+++ b/pages/mission.mdx
@@ -10,7 +10,7 @@ export default ({ children }) => <LayoutDefault>{children}</LayoutDefault>
 Child of Mercy Orphanage Centre is a nonprofit making religious institution with a mission to ensure a better life is provided to the needy and orphaned, the less fortunate and poor children from poverty stricken families through a provision of primary necessities to attain a nation where children become self-reliant future leaders we target children of ages 5 to 15 years both girls and boys.
 
 <div className="md:flex items-start">
-<div className="w-2/3 pr-24">
+<div className="md:w-2/3 md:pr-24">
 
 > I worked in another orphanage before, but due to some difficult circumstances I was not able to presume my visions. In 2010, when Child of Mercy was formed, I finally had the possibility to give the children a lovely home. That was the brightest moment in my life.
 >
@@ -23,7 +23,7 @@ Child of Mercy Orphanage Centre is a nonprofit making religious institution with
 	w={401}
 	h={535}
 	rotation="right"
-	className="w-1/3"
+	className="w-1/2 md:w-1/3"
 />
 </div>
 
@@ -62,7 +62,7 @@ The institution shall have the following specific principal objectives:
 	w={840}
 	h={680}
 	rotation="right"
-	className="mt-12"
+	className="mt-12 mb-20"
 />
 
 
