--- a/pages/contact.mdx
+++ b/pages/contact.mdx
@@ -23,7 +23,7 @@ Click on the map to open a larger version.
 
 <a href="https://www.google.com/maps/place/-4.085521,39.672258/" target="_blank" rel="noopener noreferrer">
 	<img
-		src={`https://maps.googleapis.com/maps/api/staticmap?center=-4.075521,39.672258&zoom=14&scale=1&size=1280x720&maptype=roadmap&key=${process.env.GOOGLE_MAPS_API_KEY}&format=png&visual_refresh=true&markers=size:mid%7Ccolor:0xff0000%7Clabel:%7C-4.085521,39.672258`}
+		src={`https://maps.googleapis.com/maps/api/staticmap?center=-4.075521,39.672258&zoom=14&scale=1&size=1280x720&maptype=roadmap&key=${process.env.NEXT_PUBLIC_GOOGLE_MAPS_API_KEY}&format=png&visual_refresh=true&markers=size:mid%7Ccolor:0xff0000%7Clabel:%7C-4.085521,39.672258`}
 		alt="Google Map"
 		width="1280"
 		height="720"
