UPDATE: Various Updates

--- a/pages/volunteers.mdx
+++ b/pages/volunteers.mdx
@@ -109,6 +109,8 @@ If this interests you, you can also read the comments of former volunteers who d
 </div>
 
 
+<hr />
+
 
 <div className="md:flex items-center -mx-48 mb-20">
 <Polaroid
@@ -130,6 +132,9 @@ If this interests you, you can also read the comments of former volunteers who d
 
 </div>
 </div>
+
+
+<hr />
 
 
 <div className="md:flex items-center -mx-48 mb-20">
@@ -156,6 +161,8 @@ If this interests you, you can also read the comments of former volunteers who d
 </div>
 
 
+<hr />
+
 
 <div className="md:flex items-center xl:-mx-48 mb-20">
 <Polaroid
@@ -164,6 +171,7 @@ If this interests you, you can also read the comments of former volunteers who d
 	w={840}
 	h={680}
 	rotation="left"
+	className="mt-36"
 />
 <div className="w-2/3 pl-24 text-base">
 
